@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="API_Credit" xml:space="preserve">
-    <value>API by NeoKesha, Smartkin, ManDude and Marko</value>
+    <value>API by NeoKesha, Smartkin, ManDude, BetaM and Marko</value>
   </data>
   <data name="GameTitle" xml:space="preserve">
     <value>Crash Twinsanity</value>
