@@ -85,7 +85,7 @@ API by chekwob and ManDude. (https://github.com/cbhacks/CrashEdit)
 Features:  
 - All Crates Are Blank
 - All Crates Are Wumpa
-- Randomize Warp Room
+- Randomize Warp Room Exits
 - Backwards Levels 
 - Random Levels Are Backwards
 - Randomize Crate Contents
@@ -107,12 +107,10 @@ API by chekwob and ManDude. (https://github.com/cbhacks/CrashEdit)
 Features:  
 - All Crates Are Blank
 - All Crates Are Wumpa
-- Randomize Warp Room
 - Backwards Levels
 - Random Levels Are Backwards
 - Randomize Crate Contents
 - Randomize Crate Counter
-- Randomize Flying Levels
 - Wider Camera Field-Of-View
 - Randomize Camera Field-Of-View
 - Randomize World Colors
