@@ -7,6 +7,7 @@ General:
 - Console/Region specific options will not appear on unsupported versions anymore.  
 - The window will now flash when the process is complete.  
 - Options now show a description when selected.  
+- Base files can now be extracted on their own with any game from the Mod Tools menu.
 - Mod Menus have been implemented. Variables can be edited in the menu, loaded from a text file or Mod Crate, and saved to a text file or Mod Crate.
 - Mod Crate metadata now supports localization. Set Name-xx and Description-xx with a valid ISO 639-1 country code for it to be displayed in that language. (ex. Name-de (German), Name-es (Spanish) etc.)
 (language switching is planned to be added in the future, right now it will honor the system default)
@@ -18,7 +19,7 @@ Mod Menu updates:
 Crash Bandicoot, Crash Bandicoot 2: Cortex Strikes Back, Crash Bandicoot: WARPED:
 - New feature: All Crates Are Blank
 - New feature: All Crates Are Wumpa
-- New feature: Randomize Warp Room (Crash 2 & WARPED)
+- New feature: Randomize Warp Room Exits (Crash 2)
 - New feature: Backwards Levels (Where possible: Crash 1 - Complete; Crash 2/WARPED - Beta state, not all levels)
 - New feature: Random Levels Are Backwards
 - New feature: Randomize Crate Contents
